# turtamqtt

./: README.md  config.yaml.sample  pyproject.toml  turtamqtt.py  turtamqtt.service
src/: bme280.py  bme680.py  mqtt.py  relay.py  topic.py
